FrostWire 2.0.2 build 491 - FEB/12/2018
 - Zooqle search fixes
 - TorrentDownloads search fixes
 - LimeTorrents search fixes
 - Library updates: jlibtorrent 1.2.0.17-RC1, applovin 7.8.2, ogury 2.2.8

FrostWire 2.0.1 build 490 - FEB/06/2018
 - Archive.org search fixes
 - SoundCloud search fixes
 - Music Player 'Recent' tab fixes, thanks @votaguz
 - Updated Japanese, Korean, Russian, Vietnamese, Belarusian, Bulgarian, Czech translations
 - New jlibtorrent 1.2.0.16, fixes possible crash on application update, performance
 - Library updates: build tools 27.0.3, gradle 4.5, flexbox 0.3.2
 - Crash fixes, performance upgrades 

FrostWire 2.0.0 build 485 - DEC/25/2017
 - New Transfer Detail screens for BitTorrent transfers.
 - New Share current track with FrostWire Player screenshot attachment
 - Faster startup
 - Library updates: jlibtorrent 1.2.0.15, gms 11.6.2, mopub 4.19.0, flexbox 0.3.1, applovin 7.6.2, presage 2.2.7
 - Translations update

FrostWire 1.9.9 build 478 - DEC/13/2017
 - App Startup is faster
 - Multiple freezes fixed, memory leaks fixed, crashes fixed
 - Android Jelly-Bean (<4.4) support dropped, minSdkVersion=19
 - Library updates: jlibtorrent 1.2.0.15, gms 11.6.2, mopub 4.19.0, flexbox 0.3.1, applovin 7.6.0, presage 2.2.4
 - Image viewer can now go to next and previous pictures with fling gesture
 - Update system refactor, cleanup, updates shown on nav menu
 - New Afrikaans translation
 - Transfer screen on rotation would not keep last tab selected
 - Java 8 usage, gradle 4.3.1
 - compileSDKVersion 27, support libraries 27.0.2, kotlin plugin 1.1.51
 - Material design dialog update
 - TPB domain update

FrostWire 1.9.9 - OCT/05/2017
 - Search: More search results when not in WiFi
 - Search: New Pixabay image search
 - Search: YT, SC, EZTV, Torlock, Yify, Zooqle fixed
 - Search: BTJunkie removed
 - Transfers: New 'Seeding' tab
 - Transfers: Shows 'Downloading Torrent' transfer when a magnet download starts
 - Download: Yify magnets can now be found in DHT