@@ -1,8 +1,9 @@
-FrostWire 2.0.2 build 491 - FEB/12/2018
+FrostWire 2.0.2 build 492 - FEB/16/2018
  - Zooqle search fixes
  - TorrentDownloads search fixes
  - LimeTorrents search fixes
  - Library updates: jlibtorrent 1.2.0.17-RC1, applovin 7.8.2, ogury 2.2.8
+ - When audio files are deleted from "My Files" they're now cleared from "Recents" in "My Music"
 
 FrostWire 2.0.1 build 490 - FEB/06/2018
  - Archive.org search fixes
